--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Oluwaseun Adeyemi
-logo: /assets/img/ 
+logo: /images/IMG_1759.jpg
 #description: Information Technology Specialist
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-slate
