--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Oluwaseun Adeyemi
 logo: /images/IMG_1759.jpg
 #description: Information Technology Specialist
 show_downloads: false
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
